[ios] Correct SCContentSuggestionsTestCase under UI Refresh.

Remove references to reading list in showcase content suggestions.

Bug: 849089
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I13832f021626cd3e063087666d72a64ceb628e88
Reviewed-on: https://chromium-review.googlesource.com/1084311
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563981}
Former-commit-id: 5ac84583b7c6a4b79df8f05ccc54feda1b5c2084